k8s-manifest-template-main/setup/integration-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: integration
  labels:
    name: integration
