k8s-manifest-template-main/setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: integration
  name: experience-application-ingress
  annotations:

    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/force-ssl-redirect: "false" # set true to force redirect to https
    # cert-manager.io/cluster-issuer: "letsencrypt"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: magento/basic-auth
    # # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
spec:
  rules:
    - host: host.name.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: express-application-service
                port:
                  number: 8080

---
